# Parkify-v2

./: .gitignore  README.md
Backend/: .env.example  api.yaml  app.py  pyproject.toml
Backend/application/helpers/: cache_utils.py  config.py  decorators.py  models.py  tasks.py  validators.py
Backend/application/middlewares/: init_app_context.py  init_bg_jobs.py  init_cache.py  init_celery.py  init_config.py  init_db.py  init_jwt.py  init_token_refresh.py
Backend/application/resources/admin/: admin_dashboard_resource.py  admin_history_resource.py  admin_parking_lot_add_resource.py  admin_parking_lot_delete_resource.py  admin_parking_lot_update_resource.py  admin_parking_spot_details_resource.py  admin_parking_spots_details_resource.py  admin_profile_fetch_resource.py  admin_profile_update_resource.py  admin_search_resource.py  admin_users_list_resource.py
Backend/application/resources/general/: login_resource.py  signup_resource.py
Backend/application/resources/user/: user_account_delete_resource.py  user_dashboard_resource.py  user_export_csv_resource.py  user_history_resource.py  user_profile_fetch_resource.py  user_profile_update_resource.py  user_search_resource.py  user_slot_book_resource.py  user_slot_release_resource.py  user_slot_select_resource.py
Backend/templates/: email_booking_confirmation.html  email_csv_export.html  email_daily_reminder.html  email_monthly_report.html  email_slot_release.html
Frontend/: .env.sample  index.html  package-lock.json  package.json  vite.config.js
Frontend/src/: App.vue  main.js
Frontend/src/components/: Modal.vue  (+3 more)
(+15 files in other folders)
